added the santatron backend

--- a/web/wedding/templates/index.html
+++ b/web/wedding/templates/index.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Gifts{% endblock %}
+{% block title %}Santa{% endblock %}
 {% block content %}
 
-<h1>Gifts</h1>
 
 
 {% endblock %}
